# rust-bbs-app

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2020-09-09-164054_entries/: down.sql  up.sql
src/: entry.rs  main.rs  schema.rs
static/: index.html.tera
