[package]
name = "bbs-app"
version = "0.1.0"
authors = ["Yasuhiro Matsumoto <mattn.jp@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
